--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "mocha -exit -r esm ./test/*",
+    "test": "env NODE_ENV=test mocha -r esm ./test/* --exit",
     "start": "node -r esm app.js"
   },
   "keywords": [],
